refactoring using libraries functions